# restruct

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.run/: Cargo [build].run.xml  Cargo [clean].run.xml  npm [install].run.xml  npm [run] tauri dev.run.xml
src/: App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  error.rs  main.rs  runner.rs
src-tauri/src/managers/: process_manager.rs
src/components/: MenuBar.tsx  ProjectTree.tsx  ToolBar.tsx  WindowIcons.tsx
src/components/dialog/: ProcessAttachDialog.tsx
src/hooks/: use-toast.ts
src/pages/: MainPage.tsx
src/styles/: globals.css  styles.css
