[package]
name = "restruct"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.47.1", features = ["full"] }
dashmap = "5.5"
parking_lot = "0.12.4"
rayon = "1.11.0"
lru = "0.16.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
sqlx-migrate = "0.7.1"
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
anyhow = "1.0.99"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.0", features = [
    "Win32_Foundation",
] }
