[package]
name = "restruct"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "^2", features = [] }

[dependencies]
tauri = { version = "^2", features = [] }
tauri-plugin-opener = "2.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.47.1", features = ["full"] }
thiserror = "2.0.16"
anyhow = "1.0.99"
sysinfo = "0.37.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.0", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
] }
